Added the menu and fixed the load screen

--- a/assets/ui/strings_es.properties
+++ b/assets/ui/strings_es.properties
@@ -1,3 +1,9 @@
-hola=hola
+exit=Salir
 loading=Cargando...
-pressAnyKey=Presiona una tecla
+mapping=Controles
+options=Opciones
+pressTheScreen=Toca la pantalla para empezar
+records=Marcas
+save=Guardar cambios
+sound=Sonido
+start=Empezar
