--- a/assets/ui/strings_gl.properties
+++ b/assets/ui/strings_gl.properties
@@ -1,3 +1,9 @@
-hola=ola
+exit=Salir
 loading=Cargando...
-pressAnyKey=Presiona unha tecla
+mapping=Controles
+options=Opcions
+pressTheScreen=Toca a pantalla para comezar
+records=Marcas
+save=Gardar cambios
+sound=Son
+start=Comezar
