--- a/assets/ui/strings_es.properties
+++ b/assets/ui/strings_es.properties
@@ -1,9 +1,12 @@
+congratulations=Felicidades\nEres libre
 exit=Salir
 loading=Cargando...
 mapping=Controles
+menu=Menu
 options=Opciones
 pressTheScreen=Toca la pantalla para empezar
 records=Marcas
+restart=Reiniciar
 save=Guardar cambios
 sound=Sonido
 start=Empezar
