--- a/assets/ui/strings_gl.properties
+++ b/assets/ui/strings_gl.properties
@@ -1,9 +1,12 @@
+congratulations=Parabéns\nEs libre
 exit=Salir
 loading=Cargando...
 mapping=Controles
+menu=Menu
 options=Opcions
 pressTheScreen=Toca a pantalla para comezar
 records=Marcas
+restart=Reiniciar
 save=Gardar cambios
 sound=Son
 start=Comezar
