Added all settings and tutorial

--- a/assets/ui/strings_en.properties
+++ b/assets/ui/strings_en.properties
@@ -1,12 +1,41 @@
 congratulations=Congratulations\nYou are free
 exit=Exit
 loading=Loading...
-mapping=Mapping
+credits=Credits
 menu=Menu
 options=Options
 pressTheScreen=Press the screen to start
 records=Records
 restart=Restart
 save=Save Changes
-sound=Sound
+settings=Settings
 start=Start
+music=Music
+accelerometer=Accelerometer
+vibration=Vibration
+back=Back
+killedEnemies=Killed Enemies
+takenFireflys=Taken fireflys
+story1=Ouch ... i can't remember anything, it seems that fell down a forest slope and i ended up int these bushes next to a burrow.
+story2=What should I do now? "Lights will guide your way." Those words don't stop coming to my mind... Maybe it was the last thing they said to me before rolling down the hill.
+story3=What is that over there? Is that a sheep? What is a sheep doing alone in the forest? I'm afraid that there's something weird about her... I'll have to be careful and in the worst case I can resort to alchemy to get out of a bind.
+leftInstruction=Press left arrow to move left
+rightInstruction=Press right arrow to move right
+purifyInstruction=Hold the purify button and shake your mobile to consume fury for health
+dashInstruction=Press the dash button to do a little sprint while being on air
+jumpInstruction = Press jump button to jump, if you press it twice you will do a double jump
+attackInstruction=Press attack for hitting your enemies with your tail
+story4=Your target is to turn on the lamp to purify the haunted forest , also you can collect all the fireflies on the map
+mainMusic=Main Music
+levelMusic=Level Music
+soundEffects=Sound Effects
+mapTiles=Fantasy Swap Forest Tileset
+parallax=Mystery Forest Parallax Background
+landscape=Landscape Pixel Art
+enemies=Enemies Sprites
+player=Player Sprites
+icon=Icon and SplashArt
+visual=Visuals Director
+sound=Sounds Director
+special=Special Thanks to
+parents=and Family
