--- a/assets/ui/strings_es.properties
+++ b/assets/ui/strings_es.properties
@@ -1,12 +1,41 @@
 congratulations=Felicidades\nEres libre
 exit=Salir
 loading=Cargando...
-mapping=Controles
+credits=Créditos
 menu=Menu
 options=Opciones
 pressTheScreen=Toca la pantalla para empezar
 records=Marcas
 restart=Reiniciar
 save=Guardar cambios
-sound=Sonido
+settings=Configuracion
 start=Empezar
+music=Musica
+accelerometer=Accelerometro
+vibration=Vibracion
+back=Atrás
+killedEnemies=Enemigos asesinados
+takenFireflys=Luciérnagas recogidas
+story1=Ah... No me acuerdo de nada,\n pero por lo que parece me he caído\n por una ladera del bosque y he acabado entre estos arbustos\n junto a una madriguera.
+story2=¿Qué debería hacer ahora? "Las luces guiarán tu camino". Esas palabras no dejan de venir a mi mente... Tal vez fue lo último que me dijeron antes de rodar ladera abajo.
+story3=¿Qué es eso de ahí? ¿Una oveja? ¿Qué hace una oveja sola en el bosque? Me da en el hocico que hay algo raro en ella... Tendré que andarme con cuidado y en el peor de los casos puedo recurrir a la alquimia para salir de un aprieto.
+leftInstruction=Presiona la flecha izquierda para avanzar a la izquierda
+rightInstruction=Presiona la flecha derecha para avanzar a la derecha
+purifyInstruction=Manten el boton de purificar y agita tu telefono para intercambiar furia por vida
+dashInstruction=Presiona el boton dash mientras que estas en el aire para dar un pequeño sprint
+jumpInstruction = Presiona el boton saltar para dar un salto, además tendrás un segundo salto
+attackInstruction=Presiona el boton atacar para dañar a tus enemigos con tu cola
+story4=Tu objetivo es encontrar la lámpara para purificar el bosque poseido , ademas podrás ir en busca de las luciérnagas repartidas por el mapa
+mainMusic=Música Menú
+levelMusic=Música de Nivel
+soundEffects=Efectos sonoros
+mapTiles=Fantasy Swap Forest Tileset
+parallax=Mystery Forest Parallax Background
+landscape=Landscape Pixel Art
+enemies=Animación de Enemigos
+player=Animación de Personaje Principal
+icon=Iconos e Imágenes
+visual=Director de elementos visuales
+sound=Director de sonido
+special=Agradecimientos
+parents=y Familia
