--- a/assets/ui/strings_gl.properties
+++ b/assets/ui/strings_gl.properties
@@ -1,12 +1,41 @@
 congratulations=Parabéns\nEs libre
 exit=Salir
 loading=Cargando...
-mapping=Controles
+credits=Créditos
 menu=Menu
 options=Opcions
 pressTheScreen=Toca a pantalla para comezar
 records=Marcas
 restart=Reiniciar
 save=Gardar cambios
-sound=Son
+settings=Configuracion
 start=Comezar
+music=Musica
+accelerometer=Accelerometro
+vibration=Vibracion
+back=Atrás
+killedEnemies=Enemigos asasinados
+takenFireflys=Vagalumes recollidos
+story1=Ah... Non dou recordado nada, pero polo que parece caín por unha ladeira abaixo e acabín entre estos tocos xunto a unha madrigueira.
+story2=¿Qué debería facer agora? "As luces guiarán o teu camiño". Esas palabras non deixan de vir a miña mente... Tal vez foi o último que me dixeron antes de rolar ladeira abaixo.
+story3=¿Qué é eso de ahí? ¿Una ovella? ¿Qué fai unha ovella soa no bosque? A min cheriame que hai algo raro nela... Tendrei que andarme con coidado e no peor dos casos sempre podo recorrer á alquímia para salir dunah aperta.
+leftInstruction=Presiona a flecha esquerda para avanzar hacia a esquerda
+rightInstruction=Presiona la flecha dereita para avanzar hacia a dereita
+purifyInstruction=Manten o boton de purificar e axita tu telefono para intercambiar furia por vida
+dashInstruction=Presiona o boton dash mentras que estas no aire para dar un pequeno sprint
+jumpInstruction = Presiona o boton saltar para dar un salto, ademais tendras un segundo salto
+attackInstruction=Presiona o boton atacar para dañar a tus inmigos coa tua cola
+story4=Teu obxectivo e encontrar a lampara para purificar o bosque poseido , ademais podras ir en busca dos vagalumes repartidos polo mapa
+mainMusic=Música Menú
+levelMusic=Música de Nivel
+soundEffects=Efectos sonoros
+mapTiles=Fantasy Swap Forest Tileset
+parallax=Mystery Forest Parallax Background
+landscape=Landscape Pixel Art
+enemies=Animación de Inimigos
+player=Animación de Personaje Principal
+icon=Iconos e Imágenes
+visual=Director de elementos visuais
+sound=Director de son
+special=Agradecementos 
+parents=e Familia
